Update pipeline functions to generate results + handle covariates
- for cases where covariate info exists, use the GLM function supplied
by multiHiCCompare instead of exactTest
- add check to see if covariates are uniform and just skip them
- filter bin-pairs to only test bin-pairs that are detected in > 80% of
samples
- general cleaning

--- a/notebooks/multiHiCCompare.Rmd
+++ b/notebooks/multiHiCCompare.Rmd
@@ -28,11 +28,12 @@ knitr::opts_chunk$set(
 )
 ```
 Set up file locations + load dependenies
-```{r file_locs, results=FALSE, message=FALSE, warning=FALSE}
+```{r dependencies, results=FALSE, message=FALSE, warning=FALSE}
 library(here)
-here::i_am('notebooks/matrix.QC.Rmd')
+here::i_am('notebooks/multiHiCCompare.Rmd')
 BASE_DIR <- here()
-source(file.path(BASE_DIR, 'scripts/locations.R'))
+SCRIPT_DIR <- file.path(BASE_DIR, 'scripts')
+source(file.path(SCRIPT_DIR, 'locations.R'))
 source(file.path(SCRIPT_DIR, 'constants.R'))
 source(file.path(SCRIPT_DIR, 'utils.data.R'))
 source(file.path(SCRIPT_DIR, 'utils.plot.R'))
