--- a/notebooks/TADs.Rmd
+++ b/notebooks/TADs.Rmd
@@ -58,27 +58,22 @@ tad.annotations <-
         results_fnc=load_all_TAD_annotations,
         force_redo=FALSE,
         return_data=TRUE,
-        show_col_types=FALSE
+        show_col_types=FALSE,
+        pattern=''
     ) %>% 
     filter(ReadFilter == 'mapq_30') %>% 
     select(-c(ReadFilter, region, is_boundary)) %>% 
-    separate_wider_delim(
-        Sample.ID,
-        delim=fixed('.'),
-        cols_remove=FALSE,
-        names=
-            c(
-                'Edit',
-                'Genotype',
-                'SampleNumber',
-                'Celltype'
-            )
+    get_info_from_SampleIDs(
+        sample_ID_col='SampleID',
+        keep_id=TRUE,
+        nest_col=NA
     ) %>% 
-    filter(Celltype != 'iN') %>% 
+    # filter(Celltype != 'iN') %>% 
     mutate(
         chr=factor(chr, levels=CHROMOSOMES),
-        isMerged=ifelse(grepl('Merged', SampleNumber), 'Merged', 'Individual')
+        isMerged=factor(ifelse(grepl('Merged', SampleNumber), 'Merged', 'Individual'))
     )
+tad.annotations %>% head(1) %>%  t()
 ```
 Columns for TAD annotations:
 - Sample Attributes
@@ -367,6 +362,7 @@ hitad.annotations %>%
 
 # TAD Similarity
 
+Calculate MoC for all pairs of TAD annotation sets
 ```{r calculate_mocs}
 hitad.mocs <- 
     check_cached_results(
@@ -414,6 +410,7 @@ hitad.mocs <-
     )
 hitad.mocs
 ```
+Plot distribution of similarity between genotype pairs 
 ```{r plot_MoCs_boxplot, results='as.is'}
 hitad.mocs %>% 
     rename('Measure.of.Concordance'=mocs) %>% 
@@ -449,6 +446,7 @@ hitad.mocs %>%
     #     units='in'
     # )
 ```
+Plot mean similarity between genotype pairs per chromosome
 ```{r plot_MoCs_heatmap, results='as.is'}
 hitad.mocs %>% 
     rename('Measure.of.Concordance'=mocs) %>% 
